stoat/src/snapshots/stoat__test_harness__commit_review_readonly.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 90x16
---
[0m[38;2;229;192;123m[48;2;40;44;52mb.rs --- 1/1 --- rust[0m[38;2;250;250;250m[48;2;40;44;52m                       [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                             [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                           [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;152;195;121m[48;2;40;44;52mfn[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;152;195;121m[48;2;40;44;52mb()[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;152;195;121m[48;2;40;44;52m{}[0m[38;2;250;250;250m[48;2;40;44;52m                              [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                          [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m repo [0m[38;2;86;182;194m[48;2;99;109;131m review [0m[38;2;250;250;250m[48;2;99;109;131m[scratch] [0m[38;2;99;109;131m[48;2;99;109;131m─────────────────────────────────────────────────────────────[0m
