stoat/src/snapshots/stoat__test_harness__commits_empty_history.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_commits
focused: #1 of 1
mode: normal
size: 90x10
---
[0m[38;2;99;109;131m[48;2;40;44;52mno commits[0m[38;2;250;250;250m[48;2;40;44;52m                          [0m[38;2;99;109;131m[48;2;40;44;52m│no selection[0m[38;2;250;250;250m[48;2;40;44;52m                                         [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m repo [0m[38;2;229;192;123m[48;2;99;109;131mcommits [0m[38;2;99;109;131m[48;2;99;109;131m───────────────────────────────────────────────────────────────────────[0m
