stoat/src/snapshots/stoat__test_harness__commits_open.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_commits
focused: #1 of 1
mode: normal
size: 90x16
---
[0m[7m[38;2;40;44;52m[48;2;250;250;250mc100000 feat: add b.rs              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[1m[38;2;250;250;250m[48;2;40;44;52m1 file, +1 -0[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;229;192;123m[48;2;40;44;52mc100000[0m[38;2;250;250;250m[48;2;40;44;52m chore: tweak a              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mA b.rs                                         [0m[38;2;152;195;121m[48;2;40;44;52m +1 [0m[38;2;224;108;117m[48;2;40;44;52m-0[0m
[0m[38;2;229;192;123m[48;2;40;44;52mc100000[0m[38;2;250;250;250m[48;2;40;44;52m feat: add a.rs              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;99;109;131m[48;2;40;44;52m(end of history)[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;229;192;123m[48;2;40;44;52mb.rs --- 1/1 --- rust[0m[38;2;250;250;250m[48;2;40;44;52m                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m.....[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m   1 [0m[1m[38;2;97;175;239m[48;2;40;44;52mfn[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;229;192;123m[48;2;40;44;52mb[0m[38;2;171;178;191m[48;2;40;44;52m()[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;171;178;191m[48;2;40;44;52m{}[0m[38;2;250;250;250m[48;2;40;44;52m           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                     [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m repo [0m[38;2;229;192;123m[48;2;99;109;131mcommits [0m[38;2;99;109;131m[48;2;99;109;131m───────────────────────────────────────────────────────────────────────[0m
