stoat/src/snapshots/stoat__test_harness__completion_e2e_path_dot_slash.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: insert
size: 60x16
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;171;178;191m[48;2;40;44;52m.[0m[38;2;250;250;250m[48;2;40;44;52m/                                                      [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m┌───────┐[0m[38;2;250;250;250m[48;2;40;44;52m                                               [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;40;44;52m[48;2;86;182;194mbuf.rs[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                               [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│lib.rs[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                               [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│main.rs│[0m[38;2;250;250;250m[48;2;40;44;52m                                               [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│src/[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                               [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m└───────┘[0m[38;2;250;250;250m[48;2;40;44;52m                                               [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                            [0m
[0m[38;2;40;44;52m[48;2;152;195;121m INS [0m[38;2;250;250;250m[48;2;99;109;131m ws buf.rs [+] [0m[38;2;99;109;131m[48;2;99;109;131m───────────────────────────────────[0m[38;2;250;250;250m[48;2;99;109;131m 1:3 [0m
